--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -7,51 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
-<body>
-<header>
-  <button class="menu-btn" onclick="dispmenu(this)">
-  <div class="container">
-  <div class="bar1"></div>
-  <div class="bar2"></div>
-  <div class="bar3"></div>
-  </div></button>
-  <b id="pagechanger"><a href="../index.html">Manufacturing Processes (Foundry & Casting) Virtual Simulation Lab</a></b>
-</header>
-<nav class="side-nav" id="navbar">
-		<div class="nav-element">
-			<a href="../index.html" >Aim</a>
-		</div>
-		<div class="nav-element">
-			<a href="../theory.html" >Theory</a>
-		</div>
-		<div class="nav-element">
-			<a href="../objective.html" >Objective</a>
-		</div>
-		<div class="nav-element">
-			<a href="../pretest.html" >Pretest</a>
-		</div>
-		<div class="nav-element">
-			<a href="../procedure.html" >Procedure</a>
-		</div>
-		<div class="nav-element">
-			<a href="index.html" >
-			<span>Simulation</span></a>
-		</div>
-		<div class="nav-element">
-			<a href="../posttest.html" >Posttest</a>
-		</div>
-		<div class="nav-element">
-			<a href="../references.html" >References</a>
-		</div>
-		<div class="nav-element">
-			<a href="../feedback.html" >Feedback</a>
-		</div>
-		</nav>
-		
+<body>		
 	<div id="simulation-cont">
 		<div id="matwork">
 			<div style="height:700px;">
-				Experiment 1: To study and observe various stages of casting through demonstration of sand casting process<br>
+				To study and observe various stages of casting through demonstration of sand casting process<br>
 				<div id="simulation"><br>
 				<img src="images/flask.jpg" width="38%" title="Drag"><br><br>Drag
 				</div>
