--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -80,6 +80,11 @@
 				<img src="images/rammer.jpg" title="Click here" onclick="ram()"><br>Rammer
 				</div>
 				
+				<div class="sidecontainer" id="explodedView">
+				<b style="color:red;">Click on <u>Drag</u> for Exploded View</b><br><br>
+				<img src="images/explodedView.jpg" title="Click here" onclick="explodedView()"><br>Drag
+				</div>
+				
 				<div class="sidecontainer" id="removeSprue">
 				<b style="color:red;">Click on <u>Sprue</u> to remove Riser and Downsprue</b><br><br>
 				<img src="images/sprue.jpg" title="Click here" onclick="removeSprue()"><br>Sprue
