--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -81,8 +81,8 @@
 				</div>
 				
 				<div class="sidecontainer" id="explodedView">
-				<b style="color:red;">Click on <u>Drag</u> for Exploded View</b><br><br>
-				<img src="images/explodedView.jpg" title="Click here" onclick="explodedView()"><br>Drag
+				<b style="color:red;">Click on <u>Moulding Flask</u> for Exploded View</b><br><br>
+				<img src="images/explodedView.jpg" title="Click here" onclick="explodedView()"><br>Moulding Flask
 				</div>
 				
 				<div class="sidecontainer" id="removeSprue">
