--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -82,7 +82,7 @@
 				
 				<div class="sidecontainer" id="explodedView">
 				<b style="color:red;">Click on <u>Moulding Flask</u> for Exploded View</b><br><br>
-				<img src="images/explodedView.jpg" width='60%' title="Click here" onclick="explodedView()"><br>Moulding Flask
+				<img src="images/explodedView.jpg" title="Click here" onclick="explodedView()"><br>Moulding Flask
 				</div>
 				
 				<div class="sidecontainer" id="removeSprue">
